force-app/main/default/objects/EmailMessage/fields/BypassValidations__c.field-meta.xml
<CustomField>
    <fullName>BypassValidations__c</fullName>
    <description>For user to indicate if bypass validation approval is needed.</description>
    <inlineHelpText>Selecting yes will bypass the rules that mean only clients in the household can be emailed. Approval will be required if validations are bypassed.</inlineHelpText>
    <label>Bypass Validations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>