force-app/main/default/objects/EmailMessage/fields/EmailName__c.field-meta.xml
<CustomField>
    <fullName>EmailName__c</fullName>
    <description>Hyperlink to email message</description>
    <formula>HYPERLINK( 

 &quot;/lightning/r/EmailMessage/&quot; &amp; Id &amp;&quot;/view&quot;, 

 Subject, 

 &quot;_self&quot; 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Name</label>
    <type>Text</type>
</CustomField>