force-app/main/default/objects/EmailMessage/fields/HoldingEmail__c.field-meta.xml
<CustomField>
    <fullName>HoldingEmail__c</fullName>
    <description>Indicate if the email being sent is a holding email and we need to start a new SLA.</description>
    <label>Holding email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>