force-app/main/default/objects/EmailMessage/fields/Related_User__c.field-meta.xml
<CustomField>
    <fullName>Related_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related_User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Email_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>