force-app/main/default/objects/EmailMessage/fields/RequestApproval__c.field-meta.xml
<CustomField>
    <fullName>RequestApproval__c</fullName>
    <description>User selects Yes if they would like their draft emails to be approved before being sent out.</description>
    <label>Request approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>