force-app/main/default/objects/EmailMessage/fields/ValidationType__c.field-meta.xml
<CustomField>
    <fullName>ValidationType__c</fullName>
    <description>Determines the type of validation that should run on email messages.</description>
    <label>Validation type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
                <label>None</label>
            </value>
            <value>
                <fullName>OUTGOING_AUTOMATIC</fullName>
                <label>Outgoing automatic</label>
            </value>
            <value>
                <fullName>OUTGOING_MANUAL</fullName>
                <default>true</default>
                <label>Outgoing manual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>